{
    "name": "VR Controls",
    "maps": [
        {
            "name": "Full",
            "id": "1bc56797-8e8a-4b10-972f-61ad87fe6ebb",
            "actions": [
                {
                    "name": "HeadActive",
                    "type": "Value",
                    "id": "929652ca-ae95-4e10-958b-8f65a3ee24da",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HeadPosition",
                    "type": "Value",
                    "id": "b2e8c81e-86cd-4778-a343-b77aec516f24",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HeadRotation",
                    "type": "Value",
                    "id": "f07a0d20-a553-42ca-87d6-d58bd27d4521",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftHandActive",
                    "type": "Value",
                    "id": "b7e5c572-8654-4149-aa08-f34d5db1c0f4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftHandPosition",
                    "type": "Value",
                    "id": "60697675-e4c3-4617-a192-959310278443",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftHandRotation",
                    "type": "Value",
                    "id": "d061c3c7-96cc-4017-95d6-046b2b59dde0",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftHandGrip",
                    "type": "Value",
                    "id": "a7dcb3d7-e8c8-4984-9593-6f68b82f7f28",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftHandTrigger",
                    "type": "Value",
                    "id": "4705f0ea-78c2-4852-a3dd-2a64182c5e9c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftHandJoystick",
                    "type": "Value",
                    "id": "b41086e3-4f18-4f5b-80ae-59ed5113fdaa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftHandClickJoystick",
                    "type": "Button",
                    "id": "94dc18f7-517e-45dd-a6e0-9f8e0f758f6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftHandPrimary",
                    "type": "Button",
                    "id": "b79432eb-6b45-419c-a420-8fcd6360d29c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftHandSecondary",
                    "type": "Button",
                    "id": "b31b1063-86b3-47b6-87a5-35b321b66436",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHandActive",
                    "type": "Value",
                    "id": "e3e94b04-7bf2-408a-80de-762effb3719f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightHandPosition",
                    "type": "Value",
                    "id": "169c2516-8267-44ab-93dc-8e72c0cec42a",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightHandRotation",
                    "type": "Value",
                    "id": "25cf5073-b9a0-44a4-a053-6b155bdd66bd",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightHandGrip",
                    "type": "Value",
                    "id": "d529362a-953d-4c86-9383-7bc8bba40907",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightHandTrigger",
                    "type": "Value",
                    "id": "f77fbb96-e50c-4897-9837-4d78864cd28a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightHandJoystick",
                    "type": "Value",
                    "id": "4815659f-19c5-4441-b86b-febc902c0021",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightHandClickJoystick",
                    "type": "Button",
                    "id": "edd53dbc-d12c-46a7-ace8-87897846a9af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHandPrimary",
                    "type": "Button",
                    "id": "ee8dd039-34a8-4407-b9a9-7fce96f11e47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHandSecondary",
                    "type": "Button",
                    "id": "fac1d1a2-db1d-45f6-87fc-c2dc300bb2b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ebca8018-b036-422a-ba3c-06852992698c",
                    "path": "<XRHMD>/centerEyePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeadPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7de950c2-996c-400b-b77c-13b343e35c89",
                    "path": "<XRController>{LeftHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "344f6b8c-1efe-4e9a-878e-c0b12cef5b01",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa7586ab-c28c-4fcc-9470-2cf4ca37f1d2",
                    "path": "<XRController>{RightHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b989777b-8610-427c-80c7-d37763aa2ce8",
                    "path": "<XRHMD>/centerEyeRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeadRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b8c78cc-e39c-4184-8916-71627c68cf61",
                    "path": "<XRController>{LeftHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a59feb0-b302-41cf-aa87-36406311e3d0",
                    "path": "<XRController>{LeftHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61009f21-82cd-46b2-9ecf-f5fba1607326",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9c73f09-ee0a-4f52-8428-65b5de76cefb",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a052a885-6854-4d0b-84df-7e5a2adf1d4c",
                    "path": "<XRController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54d5289e-2837-4bba-8d48-821e38b4c927",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53bb3bc5-7374-463e-b237-cac167964079",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff6b2015-9308-44eb-90bb-f88171129f6e",
                    "path": "<XRController>{RightHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "768dcb4d-c91b-4d43-a57a-18fc490c495e",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandPrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "732acf81-52f7-473d-be83-410596d01919",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandPrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca55a803-72ee-48ad-9f71-84ed7b32845d",
                    "path": "<XRController>{LeftHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5561299-7bb7-4c46-b539-f503121667cd",
                    "path": "<ViveController>{LeftHand}/trackpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0119853e-09ee-43a1-9a7c-142e1a0e0801",
                    "path": "<XRHMD>/isTracked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeadActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca16fa1b-6a36-4d80-98ed-43d20577098b",
                    "path": "<XRController>{LeftHand}/isTracked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33104273-fcf4-4c63-8c86-8d0baa41cc4d",
                    "path": "<XRController>{RightHand}/isTracked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33de64d4-1c64-4a7a-8149-bb3f986654d8",
                    "path": "<XRController>{RightHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandClickJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29dc8be9-4281-4d18-b9ed-f6ec1beb128b",
                    "path": "<XRController>{LeftHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandClickJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}